tests/error/upper_label.gw
// [contains] you are trying to use a upper label
end:
goto end;
